	* calendar/cal-islam.el (mark-islamic-calendar-date-pattern):
	* calendar/cal-julian.el (calendar-absolute-from-julian):
	* calendar/cal-persia.el (persian-prompt-for-date): Use zerop.

	* calendar/cal-china.el (chinese-calendar): Move custom group here from
	calendar.el.
	(chinese-calendar-celestial-stem, chinese-calendar-terrestrial-branch):
	Make constants.

	* calendar/cal-coptic.el (coptic-name): Add doc string.

	* calendar/cal-french.el (french-calendar-month-name-array)
	(french-calendar-day-name-array, french-calendar-special-days-array):
	Add doc strings.

	* calendar/cal-dst.el (calendar-next-time-zone-transition)
	(calendar-time-zone):
	* calendar/cal-iso.el (calendar-iso-read-args):
	* calendar/cal-mayan.el (calendar-string-to-mayan-long-count)
	(calendar-mayan-haab-to-string, calendar-mayan-tzolkin-to-string)
	(calendar-read-mayan-haab-date, calendar-read-mayan-tzolkin-date)
	(calendar-next-calendar-round-date)
	(calendar-mayan-long-count-common-era):
	* calendar/cal-move.el (calendar-scroll-left, calendar-scroll-right):
	* calendar/lunar.el (phases-of-moon, lunar-new-moon-on-or-after):
	Doc fixes.

	* calendar/cal-persia.el (persian-calendar-month-name-array)
	(persian-calendar-epoch): Make constants.

	* calendar/cal-tex.el (calendar-tex): Move custom group here from
	calendar.el.

	* calendar/cal-x.el (diary-frame-parameters)
	(calendar-frame-parameters, calendar-and-diary-frame-parameters)
	(calendar-after-frame-setup-hooks): Make defcustoms.
	(calendar-one-frame-setup, calendar-only-one-frame-setup)
	(calendar-two-frame-setup): Doc fix.

	* calendar/cal-loaddefs.el: New file.

	* calendar/cal-bahai.el, calendar/cal-china.el, calendar/cal-coptic.el:
	* calendar/cal-french.el, calendar/cal-html.el:
	* calendar/cal-islam.el, calendar/cal-iso.el, calendar/cal-julian.el:
	* calendar/cal-mayan.el, calendar/cal-move.el, calendar/cal-persia.el:
	* calendar/cal-tex.el, calendar/cal-x.el: